Added top navigation and side navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<h1>
-  {{title}}
-</h1>
-<hr>
+<app-navbar></app-navbar>
+<div class="container-fluid">
+  <div class="row">
+    <app-sidebar></app-sidebar>
+    <app-dashboard></app-dashboard>
+  </div>
+</div>
