Update invoice dummy page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
 <div class="container-fluid">
   <div class="row">
     <app-sidebar></app-sidebar>
-    <app-job></app-job>
+    <app-mainview></app-mainview>
   </div>
 </div>
