--- a/src/app/core/invoice/invoice.component.html
+++ b/src/app/core/invoice/invoice.component.html
@@ -1,3 +1,278 @@
-<p>
-  invoice works!
-</p>
+<h1 class="h1-mainpage">
+  Invoice
+</h1>
+<a href="#" class="btn btn-default btn-sm btn-add-item">Add New</a>
+<hr>
+<ul class="category-by-status">
+  <li class="all"><a href="#" class="current">All <span class="count">(32)</span></a> |</li>
+  <li class="publish"><a href="#">Published <span class="count">(31)</span></a> |</li>
+  <li class="draft"><a href="#">Draft <span class="count">(1)</span></a> |</li>
+  <li class="trash"><a href="#">Trash <span class="count">(8)</span></a></li>
+</ul>
+<div class="clearfix"></div>
+<div class="col-md-6">
+  <div class="row">
+    <table class="data-table table table-striped">
+      <thead class="thead-inverse">
+      <tr>
+        <td class="col-md-1 bill-no">No</td>
+        <td class="col-md-1 bill-date">Date</td>
+        <td class="col-md-7 bill-client">Client</td>
+        <td class="col-md-1 bill-amount">Amount</td>
+        <td class="col-md-1 bill-vat">VAT</td>
+        <td class="col-md-1 bill-total">Total</td>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>03-05-2017</td>
+        <td>Season Publishing</td>
+        <td class="data-currency">1,00,000</td>
+        <td class="data-currency">5,000</td>
+        <td class="data-currency">1,05,000</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
