--- a/src/app/layout/dashboard/dashboard.component.scss
+++ b/src/app/layout/dashboard/dashboard.component.scss
@@ -1,5 +1,14 @@
 
 /*
+ * Global add-ons
+ */
+
+.sub-header {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
+}
+
+/*
  * Main content
  */
 
