--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
-<div class="col-sm-3 col-md-2 sidebar">
+<div class="col-sm-3 col-md-1 sidebar">
   <ul class="nav nav-sidebar">
-    <li class="active"><a href="#">Dashboard <span class="sr-only">(current)</span></a></li>
+    <li><a href="#">Dashboard </a></li>
     <li><a href="#">Jobs</a></li>
     <li><a href="#">Estimate</a></li>
-    <li><a href="#">Invoice</a></li>
+    <li class="active"><a href="#">Invoice <span class="sr-only">(current)</span></a></li>
     <li><a href="#">Delivery Challan</a></li>
   </ul>
   <ul class="nav nav-sidebar">
