--- a/src/app/core/invoice/invoice.component.html
+++ b/src/app/core/invoice/invoice.component.html
@@ -24,255 +24,20 @@
       </tr>
       </thead>
       <tbody>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
-      </tr>
-      <tr>
-        <td>1990</td>
-        <td>03-05-2017</td>
-        <td>Season Publishing</td>
-        <td class="data-currency">1,00,000</td>
-        <td class="data-currency">5,000</td>
-        <td class="data-currency">1,05,000</td>
+      <tr *ngFor="let invoice of invoiceList">
+        <td>{{ invoice.no }}</td>
+        <td>{{ invoice.date | date: 'dd-MM-yyyy' }}</td>
+        <td>{{ invoice.clientName }}</td>
+        <td class="data-currency">{{ invoice.getAmount() }}</td>
+        <td class="data-currency">{{ invoice.getVATAmount() }}</td>
+        <td class="data-currency">{{ invoice.getGrandTotal() }}</td>
       </tr>
       </tbody>
     </table>
+  </div>
+</div>
+<div class="col-md-6">
+  <div class="row">
+    <app-invoice-details></app-invoice-details>
   </div>
 </div>
