Delete spec Remove sub components from Invoice Component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<app-navbar></app-navbar>
-<div class="container-fluid">
-  <div class="row">
-    <app-sidebar></app-sidebar>
-    <app-mainview></app-mainview>
-  </div>
-</div>
+<router-outlet></router-outlet>
