--- a/src/app/core/invoice/invoice.component.html
+++ b/src/app/core/invoice/invoice.component.html
@@ -1,16 +1,18 @@
-<h1 class="h1-mainpage">
+<h1 class="h1-main-page hidden-xs">
   Invoice
 </h1>
 <a href="#" class="btn btn-default btn-sm btn-add-item">Add New</a>
 <hr>
-<ul class="category-by-status">
+<ul class="category-by-status hidden-xs">
   <li class="all"><a href="#" class="current">All <span class="count">(32)</span></a> |</li>
   <li class="publish"><a href="#">Published <span class="count">(31)</span></a> |</li>
   <li class="draft"><a href="#">Draft <span class="count">(1)</span></a> |</li>
   <li class="trash"><a href="#">Trash <span class="count">(8)</span></a></li>
 </ul>
 <div class="clearfix"></div>
-<div class="col-md-6">
+
+<!--Invoice List-->
+<div class="col-md-6 col-xs-12 hidden-xs">
   <div class="row">
     <table class="data-table table table-striped">
       <thead class="thead-inverse">
@@ -18,26 +20,76 @@
         <td class="col-md-1 bill-no">No</td>
         <td class="col-md-1 bill-date">Date</td>
         <td class="col-md-7 bill-client">Client</td>
-        <td class="col-md-1 bill-amount">Amount</td>
-        <td class="col-md-1 bill-vat">VAT</td>
-        <td class="col-md-1 bill-total">Total</td>
+        <td class="col-md-1 bill-total">Amount</td>
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let invoice of invoiceList">
+      <tr *ngFor="let invoice of invoiceList" (click)="setActiveInvoice(invoice)" [ngClass]="{active: invoice == activeInvoice}">
         <td>{{ invoice.no }}</td>
         <td>{{ invoice.date | date: 'dd-MM-yyyy' }}</td>
         <td>{{ invoice.clientName }}</td>
-        <td class="data-currency">{{ invoice.getAmount() }}</td>
-        <td class="data-currency">{{ invoice.getVATAmount() }}</td>
-        <td class="data-currency">{{ invoice.getGrandTotal() }}</td>
+        <td class="data-currency">{{ invoice.grandTotal }}</td>
       </tr>
       </tbody>
     </table>
   </div>
 </div>
-<div class="col-md-6">
+
+
+<!--Invoice Details-->
+<div class="col-md-6 hidden-xs">
   <div class="row">
-    <app-invoice-details></app-invoice-details>
+    <div class="col-md-7">
+      <p>M/s {{ activeInvoice.clientName}}</p>
+      <p class="preserve-format">{{ activeInvoice.clientAddress }}</p>
+      <p>TIN: {{ activeInvoice.clientTIN}}</p>
+    </div>
+    <div class="col-md-5">
+      <p>Invoice No: {{ activeInvoice.no }}</p>
+      <p>DC No: {{ activeInvoice.dcNo }}</p>
+      <p>Date: {{ activeInvoice.date | date: 'dd-MM-yyyy' }}</p>
+    </div>
+
+    <div class="col-md-12">
+      <table class="table">
+        <thead>
+        <tr>
+          <td class="col-md-1 bill-item-no">No</td>
+          <td class="col-md-5 bill-item-description">Description</td>
+          <td class="col-md-2 bill-item-amount">Quantity</td>
+          <td class="col-md-2 bill-item-quantity">Unit Price</td>
+          <td class="col-md-2 bill-item-total">Total</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let invoiceItem of activeInvoice.invoiceItem">
+          <td>{{ invoiceItem.no }}</td>
+          <td class="preserve-format">{{ invoiceItem.description }}</td>
+          <td class="data-currency">{{ invoiceItem.quantity }}</td>
+          <td class="data-currency">{{ invoiceItem.unitPrice }}</td>
+          <td class="data-currency">{{ invoiceItem.amount }}</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="col-md-4 col-md-offset-8">
+      <table class="table">
+        <tbody>
+        <tr>
+          <td>Amount</td>
+          <td class="data-currency">  {{ activeInvoice.amount }}</td>
+        </tr>
+        <tr>
+          <td>VAT @ 5%</td>
+          <td class="data-currency">{{ activeInvoice.vatAmount }}</td>
+        </tr>
+        <tr>
+          <td>Grand Total</td>
+          <td class="data-currency">{{ activeInvoice.grandTotal }}</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
