--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,2 @@
-/* You can add global styles to this file, and also import other style files */
-body {
-  padding-top: 50px;
-  background-color: #f1f1f1;
-}
-
-h1 {
-  font-size: 23px;
-  font-weight: 400;
-  margin: 0;
-  padding: 9px 0 4px;
-  line-height: 29px;
-}
+/* Import main Inspinia style */
+@import "assets/styles/style";
