Improve Invoice Details Layout

--- a/src/app/view/basic-layout/basic-layout.component.html
+++ b/src/app/view/basic-layout/basic-layout.component.html
@@ -14,7 +14,7 @@
     <router-outlet></router-outlet>
 
     <!-- Footer -->
-    <footer></footer>
+    <footer ngSwitch></footer>
 
   </div>
   <!-- End page wrapper-->
