--- a/src/app/view/side-nav/side-nav.component.html
+++ b/src/app/view/side-nav/side-nav.component.html
@@ -20,8 +20,17 @@
           IN+
         </div>
       </li>
-      <li [ngClass]="{active: activeRoute('starter')}">
-        <a [routerLink]="['/starterView']"><i class="fa fa-th-large"></i> <span class="nav-label">Starter view</span></a>
+      <li [ngClass]="{active: activeRoute('jobs')}">
+        <a [routerLink]="['/jobs']"><i class="fa fa-suitcase"></i> <span class="nav-label">Jobs</span></a>
+      </li>
+      <li [ngClass]="{active: activeRoute('invoice')}">
+        <a [routerLink]="['/invoice']"><i class="fa fa-inr"></i> <span class="nav-label">Invoice</span></a>
+      </li>
+      <li [ngClass]="{active: activeRoute('dc')}">
+        <a [routerLink]="['/dc']"><i class="fa fa-truck"></i> <span class="nav-label">Delivery Challan</span></a>
+      </li>
+      <li [ngClass]="{active: activeRoute('estimate')}">
+        <a [routerLink]="['/estimate']"><i class="fa fa-calculator"></i> <span class="nav-label">Estimate</span></a>
       </li>
       <li [ngClass]="{active: activeRoute('dashboards')}">
         <a href="#"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard examples</span> <span class="fa arrow"></span> </a>
