--- a/src/app/view/top-nav/top-nav.component.html
+++ b/src/app/view/top-nav/top-nav.component.html
@@ -1,4 +1,4 @@
-<div class="row border-bottom">
+<div class="row border-bottom top-nav-root">
   <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
     <div class="navbar-header">
       <a class="minimalize-styl-2 btn btn-primary " (click)="toggleNavigation()"><i class="fa fa-bars"></i> </a>
