--- a/client/app/view/side-nav/side-nav.component.html
+++ b/client/app/view/side-nav/side-nav.component.html
@@ -20,29 +20,29 @@
           IN+
         </div>
       </li>
-      <li [ngClass]="{active: activeRoute('jobs')}">
+      <li routerLinkActive="active">
         <a [routerLink]="['/jobs']"><i class="fa fa-suitcase"></i> <span class="nav-label">Jobs</span></a>
       </li>
-      <li [ngClass]="{active: activeRoute('invoice')}">
+      <li routerLinkActive="active">
         <a [routerLink]="['/invoice']"><i class="fa fa-inr"></i> <span class="nav-label">Invoice</span></a>
       </li>
-      <li [ngClass]="{active: activeRoute('dc')}">
+      <li routerLinkActive="active">
         <a [routerLink]="['/dc']"><i class="fa fa-truck"></i> <span class="nav-label">Delivery Challan</span></a>
       </li>
-      <li [ngClass]="{active: activeRoute('estimate')}">
+      <li routerLinkActive="active">
         <a [routerLink]="['/estimate']"><i class="fa fa-calculator"></i> <span class="nav-label">Estimate</span></a>
       </li>
-      <li [ngClass]="{active: activeRoute('dashboards')}">
-        <a href="#"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard examples</span> <span class="fa arrow"></span> </a>
-        <ul class="nav nav-second-level collapse" [ngClass]="{in: activeRoute('dashboards')}">
-          <li [ngClass]="{active: activeRoute('dashboard1')}"><a [routerLink]="['/dashboards/dashboard1']">Dashboard v.1</a></li>
-          <li [ngClass]="{active: activeRoute('dashboard2')}"><a [routerLink]="['/dashboards/dashboard2']">Dashboard v.2</a></li>
-          <li [ngClass]="{active: activeRoute('dashboard3')}"><a [routerLink]="['/dashboards/dashboard3']">Dashboard v.3</a></li>
-          <li [ngClass]="{active: activeRoute('dashboard4')}"><a [routerLink]="['/dashboards/dashboard4']">Dashboard v.4</a></li>
-          <li [ngClass]="{active: activeRoute('dashboard5')}"><a [routerLink]="['/dashboards/dashboard5']">Dashboard v.5</a></li>
-        </ul>
-      </li>
-      <li [ngClass]="{active: activeRoute('login')}">
+      <!--<li routerLinkActive="active">-->
+        <!--<a href="#"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard examples</span> <span class="fa arrow"></span> </a>-->
+        <!--<ul class="nav nav-second-level collapse" [ngClass]="{in: activeRoute('dashboards')}">-->
+          <!--<li [ngClass]="{active: activeRoute('dashboard1')}"><a [routerLink]="['/dashboards/dashboard1']">Dashboard v.1</a></li>-->
+          <!--<li [ngClass]="{active: activeRoute('dashboard2')}"><a [routerLink]="['/dashboards/dashboard2']">Dashboard v.2</a></li>-->
+          <!--<li [ngClass]="{active: activeRoute('dashboard3')}"><a [routerLink]="['/dashboards/dashboard3']">Dashboard v.3</a></li>-->
+          <!--<li [ngClass]="{active: activeRoute('dashboard4')}"><a [routerLink]="['/dashboards/dashboard4']">Dashboard v.4</a></li>-->
+          <!--<li [ngClass]="{active: activeRoute('dashboard5')}"><a [routerLink]="['/dashboards/dashboard5']">Dashboard v.5</a></li>-->
+        <!--</ul>-->
+      <!--</li>-->
+      <li routerLinkActive="active">
         <a [routerLink]="['/login']"><i class="fa fa-th-large"></i> <span class="nav-label">Login example</span></a>
       </li>
     </ul>
