--- a/client/app/core/invoice/invoice-editor/invoice-editor.component.html
+++ b/client/app/core/invoice/invoice-editor/invoice-editor.component.html
@@ -30,46 +30,46 @@
   </div>
   <div class="mail-box">
     <div class="mail-body">
-      <form action="" method="get">
+      <form [formGroup]="invoiceForm" (ngSubmit)="onSubmit()" novalidate>
         <div class="col-sm-6 col-sm-push-6">
           <div class="form-group">
-            <label class="control-label" for="invoiceNo">Invoice No:</label>
-            <input type="text" name="invoiceNo" id="invoiceNo"
-                   [ngModel]="invoice.no" [readonly]="isReadonly"
+            <label class="control-label" for="no">Invoice No:</label>
+            <input type="text" id="no"
+                   formControlName="no"
                    class="form-control">
           </div>
           <div class="form-group">
             <label class="control-label" for="dcNo">DC No:</label>
-            <input type="text" name="dcNo" id="dcNo"
-                   [ngModel]="invoice.dcNo" [readonly]="isReadonly"
+            <input type="text" id="dcNo"
+                   formControlName="dcNo"
                    class="form-control">
           </div>
           <div class="form-group">
             <label class="control-label" for="date">Date:</label>
-            <input type="text" name="date" id="date"
-                   [ngModel]="invoice.date | date:'dd-MM-yyyy'" [readonly]="isReadonly"
+            <input type="text" id="date"
+                   formControlName="date"
                    class="form-control">
           </div>
         </div>
         <div class="col-sm-6 col-sm-pull-6">
           <div class="form-group">
             <label class="control-label" for="clientName">Client Name</label>
-            <input type="text" name="clientName" id="clientName"
-                   [ngModel]="invoice.clientName" [readonly]="isReadonly"
+            <input type="text" id="clientName"
+                   formControlName="clientName"
                    class="form-control">
           </div>
           <div class="form-group">
             <label class="control-label" for="clientAddress">Client Address</label>
-            <textarea name="clientAddress" id="clientAddress"
-                      [ngModel]="invoice.clientAddress" [readonly]="isReadonly"
+            <textarea id="clientAddress"
+                      formControlName="clientAddress"
                       class="form-control"
                       rows="3"
                       style="resize: none;"></textarea>
           </div>
           <div class="form-group">
             <label class="control-label" for="clientTIN">Client TIN</label>
-            <input type="text" name="clientTIN" id="clientTIN"
-                   [ngModel]="invoice.clientTIN" [readonly]="isReadonly"
+            <input type="text" id="clientTIN"
+                   formControlName="clientTIN"
                    class="form-control">
           </div>
         </div>
@@ -78,8 +78,8 @@
         <div class="col-sm-12">
           <div class="form-group">
             <label class="control-label" for="description">Description</label>
-            <textarea name="description" id="description"
-                      [(ngModel)]="invoice.description" [readonly]="isReadonly"
+            <textarea id="description"
+                      formControlName="description"
                       class="form-control"
                       rows="3"
                       style="resize: none;"></textarea>
@@ -87,86 +87,92 @@
         </div>
         <div class="clearfix"></div>
         <hr>
-        <ng-container *ngFor="let invoiceItem of invoice.invoiceItem; let i = index;">
+        <ng-container formArrayName="invoiceItems">
+          <ng-container *ngFor="let invoiceItem of invoiceItems.controls; let i = index;" [formGroupName]="i">
 
-          <div class="col-sm-12">
-            <div class="row">
-              <div class="col-sm-6">
-                <div class="form-group">
-                  <label class="control-label" for="{{ 'item' + i  + 'Description'}}">{{ 'Item ' + invoiceItem.no
-                    }}</label>
-                  <textarea name="{{ 'item' + i  + 'Description'}}" id="{{ 'item' + i  + 'Description'}}"
-                            [ngModel]="invoiceItem.description" class="form-control"
-                            [readonly]="isReadonly"
-                            rows="5" style="resize: none;"></textarea>
+            <div class="col-sm-12">
+              <div class="row">
+                <div class="col-sm-6">
+                  <div class="form-group">
+                    <label class="control-label" for="{{ 'item' + i  + 'Description'}}">{{ 'Item ' + (i+1)}}</label>
+                    <textarea id="{{ 'item' + i  + 'Description'}}"
+                              formControlName="description"
+                              class="form-control"
+                              rows="5" style="resize: none;"></textarea>
+                  </div>
                 </div>
-              </div>
-              <div class="col-sm-2 col-xs-4">
-                <div class="form-group text-right">
-                  <label class="control-label" for="{{ 'item' + i + 'Quantity'}}">Quantity</label>
-                  <input type="text" name="{{ 'item' + i + 'Quantity'}}" id="{{ 'item' + i + 'Quantity'}}"
-                         [ngModel]="invoiceItem.quantity"
-                         [readonly]="isReadonly"
-                         class="form-control text-right">
+                <div class="col-sm-2 col-xs-4">
+                  <div class="form-group text-right">
+                    <label class="control-label" for="{{ 'item' + i + 'Quantity'}}">Quantity</label>
+                    <input type="text" id="{{ 'item' + i + 'Quantity'}}"
+                           formControlName="quantity"
+                           class="form-control text-right">
+                  </div>
                 </div>
-
-              </div>
-              <div class="col-sm-2 col-xs-4 xs-clear-padding-left">
-                <div class="form-group text-right">
-                  <label class="control-label" for="{{ 'item' + i + 'UnitPrice'}}">Unit Price</label>
-                  <input type="text" name="{{ 'item' + i + 'UnitPrice'}}" id="{{ 'item' + i + 'UnitPrice'}}"
-                         [ngModel]="invoiceItem.unitPrice | number:'1.2-2'"
-                         [readonly]="isReadonly"
-                         class="form-control text-right">
+                <div class="col-sm-2 col-xs-4 xs-clear-padding-left">
+                  <div class="form-group text-right">
+                    <label class="control-label" for="{{ 'item' + i + 'UnitPrice'}}">Unit Price</label>
+                    <input type="text" id="{{ 'item' + i + 'UnitPrice'}}"
+                           formControlName="unitPrice"
+                           class="form-control text-right">
+                  </div>
                 </div>
-              </div>
-              <div class="col-sm-2 col-xs-4 xs-clear-padding-left">
-                <div class="form-group text-right">
-                  <label class="control-label" for="{{ 'item' + i + 'Amount'}}">Amount</label>
-                  <input type="text" name="{{ 'item' + i + 'Amount'}}" id="{{ 'item' + i + 'Amount'}}"
-                         [ngModel]="invoiceItem.amount | number:'1.2-2'"
-                         [readonly]="isReadonly"
-                         class="form-control text-right">
+                <div class="col-sm-2 col-xs-4 xs-clear-padding-left">
+                  <div class="form-group text-right">
+                    <label class="control-label" for="{{ 'item' + i + 'Amount'}}">Amount</label>
+                    <input type="text" id="{{ 'item' + i + 'Amount'}}"
+                           [value]="computeInvoiceItemAmount(i) | number:'1.2-2'"
+                           [readonly]="true"
+                           class="form-control text-right">
+                  </div>
+                </div>
+                <div class="col-sm-6 col-xs-12">
+                  <div class="form-group">
+                    <div class="btn-group" role="group">
+                      <button type="button" class="btn btn-default" (click)="onAddInvoiceItem(i)"><span class="fa fa-plus"></span> Add</button>
+                      <button type="button" class="btn btn-default" (click)="onDuplicateInvoiceItem(i)"><span class="fa fa-copy"></span> Duplicate</button>
+                      <button type="button" class="btn btn-default" (click)="onDeleteInvoiceItem(i)"><span class="fa fa-times"></span> Delete</button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-
-          </div>
-
-          <div class="clearfix"></div>
-          <hr>
+            <div class="clearfix"></div>
+            <hr>
+          </ng-container>
         </ng-container>
         <div class="form-horizontal col-sm-6 col-sm-push-6">
           <div class="form-group text-right">
             <label class="col-sm-6 control-label" for="amount">Total Amount</label>
             <div class="col-sm-6">
-              <input type="text" name="amount" id="amount"
-                     [ngModel]="invoice.amount | number:'1.2-2'"
-                     [readonly]="isReadonly"
+              <input type="text" id="amount"
+                     [value]="computeInvoiceAmount() | number:'1.2-2'"
+                     [readonly]="true"
                      class="form-control text-right">
             </div>
           </div>
           <div class="form-group text-right">
             <label class="col-sm-6 control-label" for="vatAmount">VAT @ 5%</label>
             <div class="col-sm-6">
-              <input type="text" name="vatAmount" id="vatAmount"
-                     [ngModel]="invoice.vatAmount | number:'1.2-2'"
-                     [readonly]="isReadonly"
+              <input type="text" id="vatAmount"
+                     [value]="computeVATAmount() | number:'1.2-2'"
+                     [readonly]="true"
                      class="form-control text-right">
             </div>
           </div>
           <div class="form-group text-right">
             <label class="col-sm-6 control-label" for="grandTotal">Grand Total</label>
             <div class="col-sm-6">
-              <input type="text" name="grandTotal" id="grandTotal"
-                     [ngModel]="invoice.grandTotal | number:'1.2-2'"
-                     [readonly]="isReadonly"
+              <input type="text" id="grandTotal"
+                     [value]="computeGrandTotal() | number:'1.2-2'"
+                     [readonly]="true"
                      class="form-control text-right">
             </div>
           </div>
         </div>
         <div class="clearfix"></div>
       </form>
+      <p>{{invoiceForm.value | json}}</p>
     </div>
   </div>
 </div>
