--- a/client/app/core/client/client-listing/client-listing.component.html
+++ b/client/app/core/client/client-listing/client-listing.component.html
@@ -1,7 +1,7 @@
 <div class="col-lg-7">
   <div class="mail-box-header">
     <h2>
-      Invoice (All)
+      Clients
     </h2>
     <div class="mail-tools tooltip-demo m-t-md">
       <div class="btn-toolbar" role="toolbar" aria-label="toolbox">
@@ -30,33 +30,24 @@
     </div>
     <div class="clearfix"></div>
   </div>
-  <div class="mail-box table-responsive">
+  <div class="mail-box">
     <table class="table table-hover table-mail data-table">
       <thead>
       <tr>
-        <td class="col-md-1 bill-no">No</td>
-        <td class="col-md-1 bill-date">Date</td>
-        <td class="col-md-7 bill-client">Client</td>
-        <td class="col-md-1 bill-total hidden-xs">Amount</td>
-        <td class="col-md-1 bill-total hidden-xs">VAT</td>
-        <td class="col-md-1 bill-total">Total</td>
+        <td class="col-md-7">Name</td>
+        <td class="col-md-7">Phone</td>
+        <td class="col-md-5">Email</td>
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let invoice of invoiceList"
-          (click)="setActiveInvoice(invoice)"
-          (dblclick)="setActiveInvoice(invoice); viewDetails();"
-          [ngClass]="{active: invoice == getActiveInvoice()}">
-        <td>{{ invoice.no }}</td>
-        <td>{{ invoice.date | date: 'dd-MM-yyyy' }}</td>
-        <td>{{ invoice.clientName }}</td>
-        <td class="data-currency hidden-xs">{{ invoice.amount }}</td>
-        <td class="data-currency hidden-xs">{{ invoice.vatAmount }}</td>
-        <td class="data-currency">{{ invoice.grandTotal }}</td>
+      <tr *ngFor="let client of clientList"
+          (click)="activeClient = client"
+          [ngClass]="{active: client == activeClient}">
+        <td>{{client.cName}}</td>
+        <td>{{client.phone}}</td>
+        <td>{{client.email}}</td>
       </tr>
       </tbody>
     </table>
   </div>
 </div>
-
-
