--- a/client/app/view/side-nav/side-nav.component.html
+++ b/client/app/view/side-nav/side-nav.component.html
@@ -32,6 +32,9 @@
       <li routerLinkActive="active">
         <a [routerLink]="['/estimate']"><i class="fa fa-calculator"></i> <span class="nav-label">Estimate</span></a>
       </li>
+      <li routerLinkActive="active">
+        <a [routerLink]="['/client']"><i class="fa fa-user"></i> <span class="nav-label">Client</span></a>
+      </li>
       <!--<li routerLinkActive="active">-->
         <!--<a href="#"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard examples</span> <span class="fa arrow"></span> </a>-->
         <!--<ul class="nav nav-second-level collapse" [ngClass]="{in: activeRoute('dashboards')}">-->
