--- a/client/app/view/side-nav/side-nav.component.html
+++ b/client/app/view/side-nav/side-nav.component.html
@@ -24,7 +24,7 @@
         <a [routerLink]="['/jobs']"><i class="fa fa-suitcase"></i> <span class="nav-label">Jobs</span></a>
       </li>
       <li routerLinkActive="active">
-        <a [routerLink]="['/invoice']"><i class="fa fa-inr"></i> <span class="nav-label">Invoice</span></a>
+        <a [routerLink]="['/invoices']"><i class="fa fa-inr"></i> <span class="nav-label">Invoice</span></a>
       </li>
       <li routerLinkActive="active">
         <a [routerLink]="['/dc']"><i class="fa fa-truck"></i> <span class="nav-label">Delivery Challan</span></a>
@@ -33,7 +33,7 @@
         <a [routerLink]="['/estimate']"><i class="fa fa-calculator"></i> <span class="nav-label">Estimate</span></a>
       </li>
       <li routerLinkActive="active">
-        <a [routerLink]="['/client']"><i class="fa fa-user"></i> <span class="nav-label">Client</span></a>
+        <a [routerLink]="['/clients']"><i class="fa fa-user"></i> <span class="nav-label">Client</span></a>
       </li>
       <!--<li routerLinkActive="active">-->
         <!--<a href="#"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard examples</span> <span class="fa arrow"></span> </a>-->
