--- a/client/styles.scss
+++ b/client/styles.scss
@@ -55,3 +55,21 @@ hr {
 .preserve-format {
   white-space: pre;
 }
+
+.mail-body .form-group {
+  margin-bottom: 15px;
+}
+
+@media (max-width: 767px) {
+  .mail-body {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .xs-clear-padding-left {
+    padding-left: 0;
+  }
+}
+
+input[type='number'] {
+  text-align: right;
+}
