Separate popup logic from client service

--- a/client/app/core/client/client-details/client-details.component.html
+++ b/client/app/core/client/client-details/client-details.component.html
@@ -6,7 +6,7 @@
     <div class="mail-tools tooltip-demo m-t-md">
       <div class="btn-toolbar" role="toolbar" aria-label="toolbox">
         <div class="btn-group" role="group" aria-label="New">
-          <button type="button" class="btn btn-white" (click)="navigateList()">
+          <button type="button" class="btn btn-white" (click)="navigateBack()">
             <span class="fa fa-arrow-left"></span> Back
           </button>
         </div>
