--- a/client/app/core/client/client-editor/client-editor.component.html
+++ b/client/app/core/client/client-editor/client-editor.component.html
@@ -5,7 +5,7 @@
     </h2>
     <div class="mail-tools tooltip-demo m-t-md">
       <div class="btn-group" role="group" aria-label="toolbox">
-        <button type="button" class="btn btn-white" (click)="navigateList()" >
+        <button type="button" class="btn btn-white" (click)="navigateBack()" >
           <span class="fa fa-arrow-left"></span> Back
         </button>
       </div>
