--- a/client/app/core/invoice/vat/invoice-vat-print/invoice-vat-print.component.html
+++ b/client/app/core/invoice/vat/invoice-vat-print/invoice-vat-print.component.html
@@ -11,11 +11,11 @@
           <colgroup style="width: 100px"></colgroup>
           <colgroup></colgroup>
           <tr>
-            <td>Invoice No:</td>
+            <td class="text-right" style="padding-right: 15px;">Invoice No:</td>
             <td>{{invoice._id}}</td>
           </tr>
           <tr>
-            <td>Invoice Date:</td>
+            <td class="text-right" style="padding-right: 15px;">Invoice Date:</td>
             <td>{{invoice.date}}</td>
           </tr>
         </table>
@@ -195,37 +195,6 @@
       <tr>
         <td class="supplier-details" style="vertical-align: bottom">
           <h3><b>Thank You For Your Business!</b></h3>
-          <!--<b>Details of Supplier</b>-->
-          <!--<table style="width: 100%;">-->
-          <!--<colgroup style="width: 30%;"></colgroup>-->
-          <!--<colgroup style="width: 70%;"></colgroup>-->
-          <!--<tbody>-->
-          <!--<tr>-->
-          <!--<td>Account Name:</td>-->
-          <!--<td>VST Associated Graphics Pvt. Ltd.</td>-->
-          <!--</tr>-->
-          <!--<tr>-->
-          <!--<td>Account Number:</td>-->
-          <!--<td>410700050900021</td>-->
-          <!--</tr>-->
-          <!--<tr>-->
-          <!--<td>Bank:</td>-->
-          <!--<td>Tamilnad Mercantile Bank</td>-->
-          <!--</tr>-->
-          <!--<tr>-->
-          <!--<td>Branch:</td>-->
-          <!--<td>Nerkundram</td>-->
-          <!--</tr>-->
-          <!--<tr>-->
-          <!--<td>IFS Code:</td>-->
-          <!--<td>TMBL0000410</td>-->
-          <!--</tr>-->
-          <!--<tr>-->
-          <!--<td>GST:</td>-->
-          <!--<td>22AABCV2833JZ1F</td>-->
-          <!--</tr>-->
-          <!--</tbody>-->
-          <!--</table>-->
         </td>
         <td class="signature">
           <p class="text-center">For <b>VST ASSOCIATED GRAPHICS PRIVATE LIMITED</b></p>
