--- a/client/app/view/side-nav/side-nav.component.html
+++ b/client/app/view/side-nav/side-nav.component.html
@@ -30,6 +30,9 @@
         <a [routerLink]="['/invoice-vat']"><i class="fa fa-inr"></i> <span class="nav-label">Invoice VAT</span></a>
       </li>
       <li routerLinkActive="active">
+        <a [routerLink]="['/invoice-gst']"><i class="fa fa-inr"></i> <span class="nav-label">Invoice GST</span></a>
+      </li>
+      <li routerLinkActive="active">
         <a [routerLink]="['/dc']"><i class="fa fa-truck"></i> <span class="nav-label">Delivery Challan</span></a>
       </li>
       <li routerLinkActive="active">
